--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </form>
 
     <footer>
-      <small>Personalize por URL: <code>?nome=Ana&pergunta=Quer%20namorar%20comigo%3F</code></small>
+      <small>Personalize por URL: <code>?nome=Sara&pergunta=Quer%20namorar%20comigo%3F</code></small>
     </footer>
   </div>
 
